--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -1,4 +1,7 @@
 $color-background: #222e4d;
 $color-primary: #86cf61;
 $color-secondary: #d8cca5;
-$color-cta: #ffaa49;
+$color-highlight: #ffaa49;
+
+
+$color-button-bg: #5d9242;
