--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -3,7 +3,6 @@ $color-primary: #86cf61;
 $color-secondary: #d8cca5;
 $color-highlight: #ffaa49;
 
-
 $color-button-bg: #c7b292;
-$color-button-loading-bg: #2f60c9;
+$color-button-loading-bg: #657392;
 $color-button-disabled-bg: #525252;
