--- a/src/api/views/email/default.handlebars
+++ b/src/api/views/email/default.handlebars
@@ -12,17 +12,16 @@
    */
   @media screen {
     @font-face {
-      font-family: 'Noto Sans';
+      font-family: 'Neuton';
       font-style: normal;
       font-weight: 400;
-      src: local('Noto Sans'), local('NotoSans'), url(https://fonts.gstatic.com/s/notosans/v7/o-0IIpQlx3QUlC5A4PNr6DRAW_0.woff2) format('woff2');
+      src: local('Neuton Regular'), local('Neuton-Regular'), url(https://fonts.gstatic.com/s/neuton/v10/UMBTrPtMoH62xUZCz4g6.woff2) format('woff2');
     }
-
     @font-face {
-      font-family: 'Noto Sans';
+      font-family: 'Neuton';
       font-style: normal;
       font-weight: 700;
-      src: local('Noto Sans Bold'), local('NotoSans-Bold'), url(https://fonts.gstatic.com/s/notosans/v7/o-0NIpQlx3QUlC5A4PNjXhFVZdyB1Wk.woff2) format('woff2');
+      src: local('Neuton Bold'), local('Neuton-Bold'), url(https://fonts.gstatic.com/s/neuton/v10/UMBQrPtMoH62xUZKdK0vfQr4.woff2) format('woff2');
     }
   }
 
@@ -151,7 +150,7 @@
 
           <!-- start copy -->
           <tr>
-            <td bgcolor="#ffffff" align="left" style="padding: 24px; font-family: 'Noto Sans', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+            <td bgcolor="#ffffff" align="left" style="padding: 24px; font-family: 'Neuton', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
               <h1 style="margin: 0 0 12px; font-size: 32px; font-weight: 400; line-height: 48px;">Hello {{user.name}},</h1>
               <p style="margin: 0;">{{{message}}}</p>
             </td>
@@ -168,7 +167,7 @@
                       <table border="0" cellpadding="0" cellspacing="0">
                         <tr>
                           <td align="center" bgcolor="#c7b292" style="border-radius: 6px;">
-                            <a href="{{action_url}}" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 16px 36px; font-family: 'Noto Sans', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">{{action_label}}</a>
+                            <a href="{{action_url}}" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 16px 36px; font-family: 'Neuton', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">{{action_label}}</a>
                           </td>
                         </tr>
                       </table>
@@ -182,7 +181,7 @@
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Noto Sans', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
+            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Neuton', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
               <p style="margin: 0;">Regards,<br> The Arvale Team</p>
             </td>
           </tr>
@@ -210,7 +209,7 @@
 
           <!-- start permission -->
           <tr>
-            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Noto Sans', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Neuton', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
               <p style="margin: 0;">You received this email based on activity related to your Arvale.World account. Please <a href="https://arvale.world/contact">contact us</a> if you have any concerns.</p>
             </td>
           </tr>
