--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -1,8 +1,4 @@
 $color-background: #222e4d;
 $color-primary: #86cf61;
-$color-secondary: #d8cca5;
+$color-secondary: #c7b292;
 $color-highlight: #ffaa49;
-
-$color-button-bg: #c7b292;
-$color-button-loading-bg: #657392;
-$color-button-disabled-bg: #525252;
