Update email template

--- a/src/api/views/email/default.handlebars
+++ b/src/api/views/email/default.handlebars
@@ -124,7 +124,7 @@
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
               <a href="https://sendgrid.com" target="_blank" rel="noopener noreferrer" style="display: inline-block;">
-                <img src="http://localhost:8080/static/images/logo.3b84a11.png" alt="Logo" border="0" width="294" style="display: block; width: 294px; max-width: 294px; min-width: 294px;">
+                <img src="https://arvale.world/static/images/logo.3b84a11.png" alt="Logo" border="0" width="294" style="display: block; width: 294px; max-width: 294px; min-width: 294px;">
               </a>
             </td>
           </tr>
