More forum stuff

--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -2,3 +2,4 @@ $color-background: #222e4d;
 $color-primary: #86cf61;
 $color-secondary: #c7b292;
 $color-highlight: #ffaa49;
+$color-muted: #899cc7;
