--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -3,3 +3,5 @@ $color-primary: #86cf61;
 $color-secondary: #c7b292;
 $color-highlight: #ffaa49;
 $color-muted: #899cc7;
+$color-warning: #ff9900;
+$color-danger: #ff5100;
