Improve mobile support

--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -5,3 +5,5 @@ $color-highlight: #ffaa49;
 $color-muted: #899cc7;
 $color-warning: #ff9900;
 $color-danger: #ff5100;
+
+$content-well-max-width: 1200px;
