Reduce gutter size

--- a/src/frontend/scss/variables.scss
+++ b/src/frontend/scss/variables.scss
@@ -6,4 +6,6 @@ $color-muted: #899cc7;
 $color-warning: #ff9900;
 $color-danger: #ff5100;
 
+// Grid settings
 $content-well-max-width: 1200px;
+$gutter: .6em;
